fix action page action name wrapping

--- a/src/scss/action.scss
+++ b/src/scss/action.scss
@@ -268,6 +268,7 @@ $appear-disappear-animation-duration: 0.8s;
             float: left;
             font-size: 40rpx;
             font-weight: bold;
+            white-space: nowrap;
           }
         }
       }
